# kbasic

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  basic.bnf  hammurabi.bas  hello.txt  manual.md  test.bas  walstr.bas  walstrcc-lower.bas
src/: Console.hpp  ConsoleOutput.hpp  FontManager.cpp  FontManager.hpp  Lexer.cpp  Lexer.hpp  MainWindow.cpp  MainWindow.hpp  Parser.cpp  Parser.hpp  System.cpp  System.hpp  Value.cpp  Value.hpp  Window.cpp  Window.hpp  main.cpp  main.hpp
